# sma-wf-editor

./: README.md  compress.py  decompress.py  devices.json  download_wfs_internet.py  edit.py  pyproject.toml  sma_wf_creator.py  smawf.py  wf_creator_rc.py  wf_creator_window.py  wf_image.py  wf_layer.py  wf_preview_dialog.py
ui/: wf_creator.qrc  wf_creator.ui
